# mmt1

./: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
.tauri/: mmt1.key.pub
doc/: database-format.md
guides/: MIGRATION.md  SECURITY.md  migration.md  security.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  editor.rs  explorer.rs  lib.rs  local_state.rs  main.rs  metamath.rs  model.rs  search.rs  util.rs
src-tauri/src/database/: constant.rs  floating_hypothesis.rs  header.rs  html_representation.rs  in_progress_theorem.rs  theorem.rs  variable.rs
src-tauri/src/editor/: add_to_database.rs  external_window.rs  format.rs  on_edit.rs  parse_mmp.rs  renumber.rs  unify.rs
src-tauri/src/local_state/: comment.rs  constant.rs  floating_hypothesis.rs  header.rs  html_representation.rs  in_progress_theorem.rs  theorem.rs  variable.rs
src-tauri/src/metamath/: export.rs  mm_parser.rs  mmp_parser.rs  parse.rs  unify.rs  verify.rs
src-tauri/src/metamath/mm_parser/: html_validation.rs
src-tauri/src/metamath/mmp_parser/: calc_indention.rs  stage_1.rs  stage_2.rs  stage_3.rs  stage_4.rs  stage_5.rs  stage_6.rs
src-tauri/src/util/: description_parser.rs  earley_parser.rs  earley_parser_optimized.rs  header_iterators.rs  last_curr_next_iterator.rs  parse_tree_node_iterator.rs  theorem_iterator.rs  work_variable_manager.rs
src/lib/components/nav/: TabBar.svelte  TitleBar.svelte
src/lib/components/pages/: CommentPage.svelte  ConstantsPage.svelte  FloatingHypothesisPage.svelte  HeaderPage.svelte  TheoremPage.svelte  VariablesPage.svelte
src/lib/components/settingsTabs/: SymbolConfigSettingsTab.svelte  VariableOrConstantSettingsTab.svelte
src/lib/components/tabs/: CommentTabComponent.svelte  ConstantsTabComponent.svelte  EditorTab.svelte  EditorTabComponent.svelte  EditorTabSplitViewComponent.svelte  EmptyTab.svelte  EmptyTabComponent.svelte  FloatingHypothesisTabComponent.svelte  HeaderTabComponent.svelte  SearchTabComponent.svelte  SettingsTabComponent.svelte  TabComponent.svelte  TheoremExplorerTabComponent.svelte  TheoremTab.svelte  TheoremTabComponent.svelte  VariablesTabComponent.svelte
src/lib/components/titleBar/: TitleBar.svelte  TitleBarDropdown.svelte
src/lib/components/util/: ContextMenu.svelte  ContextMenuElement.svelte  DescriptionParsed.svelte  (+17 more)
src/lib/icons/: ArrowLeftIcon.svelte  ChevronDownIcon.svelte  ChevronRightIcon.svelte  MoreIcon.svelte  PlusIcon.svelte  SplitViewIcon.svelte
src/lib/monaco/: monaco.ts
src/lib/nav/: TabBar.svelte
src/lib/navSidebar/: NavSidebar.svelte  NavSidebarEditor.svelte  NavSidebarExplorer.svelte
src/lib/navigation/: NavSidebar.svelte
src/lib/sharedState/: explorerData.svelte.ts  fileExplorerData.svelte.ts  globalState.svelte.ts  htmlData.svelte.ts  idGenerator.svelte.ts  interceptLinks.svelte.ts  mainData.svelte.ts  model.svelte.ts  nameListData.svelte.ts  searchData.svelte.ts  settingsData.svelte.ts  shortcuts.svelte.ts  tab.svelte.ts  tabData.svelte.ts  tabManager.svelte.ts  util.svelte.ts  version.svelte.ts
src/lib/tabs/: EditorTab.svelte  TheoremTab.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/externalWindow/: +page.svelte
src/routes/home/: +page.svelte
src/routes/import/: +page.svelte
src/routes/main/: +layout.svelte  +page.svelte
(+61 files in other folders)
