[package]
name = "mmt1"
version = "0.1.0"
description = "The rust side of mmt1, a tauri application for creating and managing metamath databases."
authors = ["Marlo Bruder"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mmt1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
futures = "0.3.18"
markup5ever = "0.10.1"
kuchiki = "0.8.1"
lightningcss = "1.0.0-alpha.67"
tauri-plugin-store = "2"
tauri-plugin-opener = "2.5.0"
rayon = "1.11"
sha2 = "0.10"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
